Bug 1136436 - Remove 'ios-active' waffle switch from download button include

--- a/bedrock/firefox/templates/firefox/includes/download-button.html
+++ b/bedrock/firefox/templates/firefox/includes/download-button.html
@@ -64,7 +64,7 @@
               {% if channel != 'alpha' %}
                 <span class="download-subtitle">{{ _('Get it free on Google Play') }}</span>
               {% endif %}
-            {% elif plat.os == 'ios' and waffle.switch('ios-active') %}
+            {% elif plat.os == 'ios' %}
               <strong class="download-title">{{ _('<span>Firefox</span> for iOS') }}</strong>
               <span class="download-subtitle">{{ _('Get it free from the App Store') }}</span>
             {% else %}
