Bug 1203589 - 'Download a fresh copy' should link to firefox/all/#localecode
add anchor to new2.html

--- a/bedrock/firefox/templates/firefox/new.html
+++ b/bedrock/firefox/templates/firefox/new.html
@@ -127,7 +127,7 @@
               <li class="hide-for-refresh"><a href="{{settings.GOOGLE_PLAY_FIREFOX_LINK }}">{{_('Get Firefox on your Android device')}}</a></li>
               <li class="hide-for-refresh"><a href="{{ url('firefox.os.index') }}">{{_('Learn about Firefox OS')}}</a></li>
               {% endif %}
-              <li><a href="{{ url('firefox.all') }}">{{_('Download a fresh copy')}}</a></li>
+              <li><a href="{{ url('firefox.all') }}#{{ LANG }}">{{_('Download a fresh copy')}}</a></li>
             </ul>
           </div>
           <div class="android-latest-links-wrapper latest-links-wrapper">
