--- a/bedrock/mozorg/templates/mozorg/credits.html
+++ b/bedrock/mozorg/templates/mozorg/credits.html
@@ -45,7 +45,7 @@
   This is a list of people who have "made a significant investment of time, with useful results,
   into <a href="{{ secure_url('mozorg.home') }}">Mozilla project</a>-governed activities". Any such
   contributors who wish to be added to the list should <a href="https://docs.google.com/forms/d/1rwLVzr1Fql9ZtAKkG_z5jcRczn2uy84zqwBX9gX52OY/viewform">fill in this form</a>.
-  There is a <a href="{{ secure_url('mozorg.credits-faq') }}">FAQ</a> about this process. The list was last updated {{ credits.last_modified_datetime|datetime }}.
+  There is a <a href="{{ secure_url('mozorg.credits-faq') }}">FAQ</a> about this process. The list was last updated {{ credits.last_modified|datetime }}.
 </p>
 </body>
 </html>
